alignment issue fix

--- a/src/app/layouts/header/header.component.css
+++ b/src/app/layouts/header/header.component.css
@@ -1,5 +1,6 @@
 header{
   height: 100px;
+  width: auto;;
 }
 
 .site-logo{
